<resources>
    <string name="app_name">SVU 303</string>
    <string name="change_app_theme">Change App Theme</string>
    <string name="orange">Orange</string>
    <string name="sounds">Sounds</string>
    <string name="ok">OK</string>
    <string name="burble">Burble</string>
    <string name="blue">Blue</string>
    <string name="turn_on_sounds">Turn On Sounds</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_do_not_have_an_accound">Do not have an account?</string>
    <string name="admin">Admin</string>
    <string name="name">Name</string>
    <string name="tests">Tests</string>
    <string name="manage_tests">Manage Tests</string>
    <string name="add_new_question">Add New Question</string>
    <string name="question">Question</string>
    <string name="question_grade">Question Grade</string>
    <string name="add">Add</string>
    <string name="questions">Questions</string>
    <string name="edit_question">Edit Question</string>
    <string name="edit">Edit</string>
    <string name="add_new_answer">Add New Answer</string>
    <string name="answer">Answer</string>
    <string name="exams">Exams</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="end_exam">End Exam</string>
    <string name="register">Register</string>
    <string name="syrian_virtual_university">Syrian Virtual University</string>
</resources>