<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    tools:context="com.tec.svu303_v2.AppSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/mid">

            <ImageView
                android:layout_width="@dimen/big"
                android:layout_height="@dimen/big"
                android:layout_marginTop="@dimen/login"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login"
                android:layout_marginBottom="@dimen/mid"
                android:text="@string/change_app_theme"
                android:textAlignment="center"
                android:textSize="@dimen/large"
                tools:ignore="SpUsage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orangeBTN"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:layout_height="wrap_content"
                android:text="@string/orange" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/burbleBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/burble"
                android:textColor="@color/white"
                android:text="@string/burble" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/blueBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/x_large"
                android:text="@string/blue" />

            <CheckBox
                android:id="@+id/turnOnCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on_sounds" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mid"
                android:textColor="@color/white"
                android:text="@string/ok" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>