<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="@dimen/big"
        android:layout_height="@dimen/big"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min"
        android:layout_marginHorizontal="@dimen/large"
        android:background="@drawable/custom_input"
        android:padding="@dimen/min"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min"
        android:layout_marginHorizontal="@dimen/large"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        android:padding="@dimen/min"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/min"
        android:layout_marginHorizontal="@dimen/large"
        android:background="@drawable/custom_input"
        android:padding="@dimen/min"
        android:hint="@string/password" />


    <Button
        android:id="@+id/registerBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/x_large"
        android:layout_marginHorizontal="@dimen/large"
        android:text="@string/register" />


</LinearLayout>