<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".UpdateQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAnswerBTN"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/big"
            android:layout_marginHorizontal="@dimen/x_large"
            android:layout_height="wrap_content"
            android:text="@string/add_new_answer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/edit_question"
                    android:textAlignment="center"
                    android:textSize="@dimen/large"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/questionTitleET"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="@dimen/x_large"
                    android:layout_marginTop="@dimen/large"
                    android:background="@drawable/custom_input"
                    android:hint="@string/question"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/min" />

                <EditText
                    android:id="@+id/gradeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/x_large"
                    android:layout_marginTop="@dimen/min"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/custom_input"
                    android:hint="@string/question_grade"
                    android:inputType="number"
                    android:padding="@dimen/min" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirmBTN"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/x_large"
                    android:layout_marginTop="@dimen/mid"
                    android:text="@string/edit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answersRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mid" />
    </LinearLayout>
</ScrollView>