<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".QuestionsManagementActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mid"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xx_large"
                android:text="@string/add_new_question"
                android:textAlignment="center"
                android:textSize="@dimen/large"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/questionTitleET"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/x_large"
                android:layout_marginTop="@dimen/min"
                android:background="@drawable/custom_input"
                android:hint="@string/question"
                android:inputType="textMultiLine"
                android:padding="@dimen/min" />

            <EditText
                android:id="@+id/gradeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/x_large"
                android:layout_marginTop="@dimen/min"
                android:layout_marginRight="5dp"
                android:background="@drawable/custom_input"
                android:hint="@string/question_grade"
                android:inputType="number"
                android:padding="@dimen/min" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/x_large"
                android:layout_marginTop="@dimen/min"
                android:text="@string/add"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/x_large"
                android:textSize="@dimen/large"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>