<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".AnswerManagementActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min"
        app:cardCornerRadius="@dimen/min">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/answerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:text="@string/add_new_answer"
                android:textAlignment="center"
                android:textSize="@dimen/large"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/answerTitleET"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="@dimen/x_large"
                android:layout_marginTop="@dimen/large"
                android:background="@drawable/custom_input"
                android:hint="@string/answer"
                android:inputType="textMultiLine"
                android:padding="@dimen/min" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min">

                <RadioButton
                    android:id="@+id/trueRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="True"
                    android:textSize="@dimen/large" />

                <RadioButton
                    android:id="@+id/falseRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="False"
                    android:textSize="@dimen/large" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBTN"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/x_large"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/min"
                android:text="@string/add" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>